# twitter-alchemy

./: .gitignore  README.md  setup.cfg
src/twitteralchemy/: models.py  twitteralchemy.py
src/twitteralchemy/models/: pydantic.py
tests/: test__create_tables.py  test__get_tweet_model.py  test__get_user_model.py  test__parsing_response.py  tweet.json  tweet_w_includes.json  user.json
twitteralchemy/: __init__.py  orm.py  schemas.py
