[metadata]
name = twitter-alchemy
version = 0.0.2
author = D. Hudson Smith
author_email = dane2@clemson.edu
description = Sqlalchemy models for your twitter data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhudsmith/twitter-sqlalchemy
project_urls =
    Bug Tracker = https://github.com/dhudsmith/twitter-sqlalchemy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    sqlalchemy>=1.4.0
    pydantic>=1.8.0
python_requires = >=3.6

[options.packages.find]
include = twitteralchemy

[options.extras_require]
test =
    psycopg2-binary>=2.8.6